<resources>

    <string name="app_name">LabelPrinter</string>
	<string name="welcome">Welcome</string>
	<string name="editlabel">Edit Label</string>
	<string name="picture">Picture</string>
	<string name="text">Text</string>
	<string name="hardtext">HardText</string>
	<string name="barcode">Barcode</string>
	<string name="qrcode">QRCode</string>
	<string name="pdf417">PDF417</string>
	<string name="box">Box</string>
	<string name="line">Line</string>
	<string name="rect">Rect</string>
	<string name="newlabel">New</string>
	<string name="openlabel">Open</string>
	<string name="savelabel">Save</string>
	<string name="paper">Paper</string>
	<string name="settings">Settings</string>
	<string name="modify">Modify</string>
	<string name="delete">Delete</string>
	
	<string name="simpletest">SimpleTest</string>
	<string name="label">Label</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="more">More</string>
	
	<string name="exit">Exit</string>
	<string name="help">Help</string>
	
	<string name="searchbtdevice">Search BT Device</string>
	
	<string name="printqrcode">Print QRCode</string>
	<string name="printbarcode">Print Barcode</string>
	<string name="printtext">Print Text</string>
	<string name="printpicture">Print Picture</string>
	
	<string name="content">Content</string>
	<string name="type">Type</string>
	<string name="width">Width</string>
	<string name="height">Height</string>
	<string name="setbarcodeformat">Set Barcode Format</string>
	
	<string name="linewidth">Line Width</string>
	<string name="startpoint">Start Point</string>
	<string name="endpoint">End Point</string>
	<string name="line.ps">PS. The upper left corner of the screen coordinates (0,0), to the right is the X axis direction, down to Y axis direction</string>
	
	<string name="size">Size</string>
	
	<string name="mode">Mode</string>
</resources>
