<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_edit_label_advanced_paperset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mode"
            android:textSize="15dp" />

        <RadioGroup
            android:id="@+id/radioGroupMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioModeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label" />

            <RadioButton
                android:id="@+id/radioModePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>