<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <requestFocus />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="@string/width"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <requestFocus />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <requestFocus />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="@string/linewidth"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextBorderWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>