<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="61sp"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="61sp"
                android:layout_height="wrap_content"
                android:text="@string/width"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinnerBarcodeUnitWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/spinner_barcode_unitwidth"
                android:gravity="left|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="61sp"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextBarcodeHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="61sp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/cbRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="旋转90°" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>